# gui-main

./: .gitignore  README.md  requirements.txt  test_python_shm.py
cpp_robot_core/: CMakeLists.txt
cpp_robot_core/include/: impedance_control_manager.hpp  impedance_scan_controller.hpp
cpp_robot_core/include/robot_core/: rt_motion_service.h
cpp_robot_core/src/: core_runtime.cpp  impedance_scan_example.cpp  rt_motion_service.cpp  test_force_control.cpp  test_impedance_scan.cpp  test_recovery_manager.cpp
gui-main/: CHANGELOG.md  pytest.ini  sitecustomize.py
gui-main/configs/: force_control.json  robot.yaml
gui-main/cpp_robot_core/: CMakeLists.txt
gui-main/spine_ultrasound_ui/: __init__.py  api_server.py  compat.py  main_window.py
gui-main/tests/: conftest.py  test_api_server_extended_contract.py  test_app_controller.py  test_mock_backend.py  test_session_products.py  test_xmate_mainline.py
gui-main/ui_frontend/: package-lock.json
spine_ultrasound_ui/: test_frontend_architecture.py  test_frontend_unit.py
spine_ultrasound_ui/core/: app_controller.py  event_bus.py  postprocess_service.py  process_watchdog.py
spine_ultrasound_ui/core_pipeline/: shm_client.py
spine_ultrasound_ui/models/: session_model.py
spine_ultrasound_ui/services/: config_manager.py  headless_adapter.py  ipc_protocol.py  mock_core_runtime.py
tests/: test_headless_adapter.py
ui/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  README.md  TEST_STRATEGY.md  pytest.ini  requirements.txt
ui/.devcontainer/: Dockerfile  devcontainer.json
ui/.github/: CODEOWNERS
ui/configs/: README.md  calibration.yaml  robot_identity_mainline.json
ui/cpp_robot_core/: CMakeLists.txt
ui/cpp_robot_core/cmake/: FindVendoredRokaeSdk.cmake  RobotCoreProfiles.cmake  RobotCoreSdkPolicy.cmake
ui/cpp_robot_core/examples/: impedance_scan_example.cpp
ui/cpp_robot_core/include/: admittance_controller.hpp  impedance_scan_controller.hpp  pose_interpolator.hpp
ui/cpp_robot_core/include/robot_core/: command_registry.h  command_server.h  contact_control_contract.h  core_runtime.h  core_runtime_contract_publisher.h  core_runtime_dispatcher.h  core_runtime_kernel_components.h  deployment_policy.h  execution_plan_runtime.h  generated_command_manifest.inc  generated_runtime_command_contracts.inc  generated_runtime_command_request_parsers.inc  generated_runtime_command_request_types.h  generated_runtime_command_typed_handler_decls.inc  generated_runtime_command_typed_handlers.inc  generated_runtime_config_apply_snapshot.inc  generated_runtime_config_field_decls.inc  model_authority.h  normal_axis_admittance_controller.h  normal_force_estimator.h  nrt_motion_service.h  orientation_trim_controller.h  recording_service.h  robot_family_descriptor.h  robot_identity_contract.h  rt_host_bootstrap.h  rt_motion_service.h  runtime_command_contracts.h  runtime_types.h  scan_plan_validator.h  sdk_robot_facade.h  sdk_robot_facade_internal.h  tangential_scan_controller.h
ui/cpp_robot_core/src/: command_registry.cpp  command_server.cpp  contact_control_contract.cpp  core_runtime.cpp  core_runtime_authority.cpp  core_runtime_command_helpers.h  core_runtime_contract_envelope.cpp  core_runtime_contract_execution.cpp  core_runtime_contract_governance.cpp  core_runtime_contract_identity.cpp  core_runtime_contract_json_helpers.h  core_runtime_contract_projection.cpp  core_runtime_contract_publisher.cpp  core_runtime_contract_release.cpp  core_runtime_contract_safety.cpp  core_runtime_contracts.cpp  core_runtime_dispatcher.cpp  core_runtime_execution_commands.cpp  core_runtime_power_validation.cpp  core_runtime_query_commands.cpp  core_runtime_query_contracts.cpp  core_runtime_query_identity.cpp  core_runtime_query_json_helpers.h  core_runtime_query_motion.cpp  core_runtime_query_operational.cpp  core_runtime_session_commands.cpp  core_runtime_session_execution.cpp  deployment_policy.cpp  execution_plan_runtime.cpp  ipc_messages.pb.cpp  main_ubuntu_rt.cpp  model_authority.cpp  normal_axis_admittance_controller.cpp  normal_force_estimator.cpp  nrt_motion_service.cpp  orientation_trim_controller.cpp  pose_interpolator.cpp  recording_service.cpp  robot_family_descriptor.cpp  rt_host_bootstrap.cpp  (+18 more)
ui/cpp_robot_core/tests/: test_contact_control_contract.cpp  test_execution_plan_runtime_truth.cpp  test_impedance_scan.cpp  test_normal_axis_admittance_controller.cpp  test_normal_force_estimator.cpp  test_orientation_trim_controller.cpp  test_protocol_bridge.cpp  test_recording_service.cpp  test_rt_motion_service_truth.cpp  test_tangential_scan_controller.cpp  test_xmate_model_compile_contract.cpp
ui/docs/: 00_START_HERE.md  APP_CONTROLLER_DEPENDENCY_AUDIT.md  BACKEND_AUTHORITY_SURFACE.md  BUILD_EVIDENCE_POLICY.md  DOCUMENT_AUTHORITY_POLICY.md  HIL_VALIDATION_CHECKLIST.md  INTERFACE_MATRIX.md  OPERATION_FLOW.md  PROFILE_MATRIX.md  PROFILE_RELEASE_RUNBOOK.md  RECORDING_EVENT_CONSUMPTION_MAP.md  REPOSITORY_GATES.md  ROBOT_FAMILY_MATRIX.md  RT_KERNEL_SPEC.md  RT_PHASE_CONTROL_CONTRACT.md  SDK_USAGE_POLICY.md  VERIFICATION_BOUNDARY.md  runtime_contract_expansion.md
ui/schemas/: assessment_agreement.schema.json  assessment_summary.schema.json  back_roi.schema.json  body_surface.schema.json  bone_mask.schema.json  calibration_bundle.schema.json  camera_frame_envelope.schema.json  cobb_measurement.schema.json  coronal_vpi.schema.json  device_readiness.schema.json  frame_anatomy_points.schema.json  frame_sync_index.schema.json  guidance_targets.schema.json  lamina_candidates.schema.json  landmark_track.schema.json  landmarks.schema.json  localization_freeze.schema.json  localization_readiness.schema.json  localization_replay_index.schema.json  manifest.schema.json  manual_adjustment.schema.json  midline_polyline.schema.json  patient_registration.schema.json  pose_series.schema.json  pressure_analysis.schema.json  pressure_sensor_timeline.schema.json  prior_assisted_cobb.schema.json  prior_assisted_curve.schema.json  reconstruction_evidence.schema.json  reconstruction_input_index.schema.json  spine_curve.schema.json  (+14 more)
ui_frontend/: package.json
(+585 files in other folders)
